<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.sum.common.view.TitleBar
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_12"
                app:middleText="@string/login_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_222427"
                android:textSize="@dimen/text_size_18"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/login_know_more_android"
                app:layout_constraintTop_toBottomOf="@+id/title_bar"
                app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <TextView
                    android:id="@+id/tv_phone_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+86"
                    android:textColor="@color/color_222427"
                    android:textSize="@dimen/text_size_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            <View
                    android:id="@+id/view_middle_line"
                    android:layout_width="@dimen/dp_1"
                    android:layout_height="@dimen/dp_16"
                    android:background="@color/color_0165B8"
                    android:layout_marginStart="@dimen/dp_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_phone_prefix"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            <com.sum.framework.weights.ClearEditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_36"
                    android:layout_marginStart="@dimen/dp_12"
                    android:background="@color/transparent"
                    android:hint="@string/login_hint_phone"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/color_222427"
                    android:textColorHint="@color/color_898e92"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintStart_toEndOf="@+id/view_middle_line"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints,TextFields" />

            <View
                    android:id="@+id/view_phone_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@color/color_dce0e4"
                    app:layout_constraintTop_toBottomOf="@+id/et_phone"
                    tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                app:layout_constraintTop_toBottomOf="@+id/cl_login_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.sum.framework.weights.ClearEditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_38"
                    android:background="@color/transparent"
                    android:hint="@string/login_hint_password"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:layout_marginEnd="@dimen/dp_8"
                    android:textColor="@color/color_222427"
                    android:textColorHint="@color/color_898e92"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_password_toggle"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_password_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:padding="@dimen/dp_6"
                    android:src="@mipmap/ic_psw_invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_forget_password" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:paddingStart="@dimen/dp_12"
                    android:paddingEnd="@dimen/dp_12"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/color_0165B8"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@color/color_dce0e4"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"
                    tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_login_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                app:layout_constraintTop_toBottomOf="@+id/cl_login_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_agreement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:background="@null"
                    android:drawableLeft="@drawable/checkbox_bg_default"
                    android:drawablePadding="6dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/color_4f5356"
                    android:text="@string/login_agreement"
                    android:foreground="@null"
                    android:textSize="@dimen/text_size_12"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:text="@string/login_name"
                android:textColor="@color/white"
                android:background="@drawable/login_phone_selector"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_login_agreement" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:text="@string/register_new_account"
                android:textColor="@color/color_4f5356"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_24"
                android:textSize="@dimen/text_size_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <View
                    android:id="@+id/view_style_line_start"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:background="@color/color_dce0e4"
                    app:layout_constraintEnd_toStartOf="@+id/tv_login_style_other"
                    app:layout_constraintTop_toTopOf="@+id/tv_login_style_other"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_login_style_other"
                    tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_login_style_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_style_other"
                    android:textColor="@color/color_4f5356"
                    android:textSize="@dimen/text_size_12"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="MissingConstraints" />

            <View
                    android:id="@+id/view_style_line_end"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_marginStart="@dimen/dp_12"
                    android:background="@color/color_dce0e4"
                    app:layout_constraintStart_toEndOf="@+id/tv_login_style_other"
                    app:layout_constraintTop_toTopOf="@+id/tv_login_style_other"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_login_style_other"
                    tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_login_wx"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:src="@mipmap/ic_wechat"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_style_other"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_login_qq" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_login_qq"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:src="@mipmap/ic_qq"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_style_other"
                    app:layout_constraintStart_toEndOf="@+id/iv_login_wx"
                    app:layout_constraintEnd_toStartOf="@+id/iv_login_apple" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_login_apple"
                    android:layout_width="@dimen/dp_32"
                    android:layout_height="@dimen/dp_32"
                    android:src="@mipmap/ic_weibo"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_style_other"
                    app:layout_constraintStart_toEndOf="@+id/iv_login_qq"
                    app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>